--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@layer utilities {
+  .button {
+    width: 100%;
+    height: 2.25rem;
+    border-radius: 2px;
+    cursor: pointer;
+  }
+  .input {
+    width: 100%;
+    padding: 0.5rem;
+    border-bottom: 2px solid #cbd5e0;
+    font-weight: 500;
+    outline: none;
+  }
+  .link-button {
+    width: 100%;
+    height: 2.25rem;
+    border-radius: 2px;
+    cursor: pointer;
+    display: block;
+    text-align: center;
+    line-height: 2.25rem;
+  }
+}
