--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,16 @@ button {
   font-weight: 500;
 }
 
+a {
+  font-weight: 500;
+}
+
 @layer utilities {
   .button {
     width: 100%;
     height: 2.25rem;
     border-radius: 8px;
     cursor: pointer;
-    font-weight: 500;
   }
   .input {
     width: 100%;
@@ -44,6 +47,5 @@ button {
     display: block;
     text-align: center;
     line-height: 2.25rem;
-    font-weight: 500;
   }
 }
