fix: 공통 타이틀 클래스 추가

--- a/src/index.css
+++ b/src/index.css
@@ -48,4 +48,10 @@ a {
     text-align: center;
     line-height: 2.25rem;
   }
+  .title {
+    margin-top: 50px;
+    font-size: 1.875rem; /* 30px */
+    line-height: 2.25rem; /* 36px */
+    font-weight: bold;
+  }
 }
