fix: 스토리카드 말줄임

--- a/src/index.css
+++ b/src/index.css
@@ -53,4 +53,27 @@ a {
     line-height: 2.25rem; /* 36px */
     font-weight: bold;
   }
+  .ellipsis {
+    width: 100%;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .multi-ellipsis {
+    width: 100%;
+    white-space: normal;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .line-clamp-2 {
+    -webkit-line-clamp: 2;
+  }
+  .line-clamp-3 {
+    -webkit-line-clamp: 3;
+  }
+  .line-clamp-4 {
+    -webkit-line-clamp: 4;
+  }
 }
