feat: 인기 퍼즐 추가 및 스타일 수정 (#35)
* fix: modal 최대높이, 폰트 크기 축소

* feat: scrollbar 스타일 적용

* feat: StoryList 컴포넌트 추가

* feat: 인기 퍼즐 목록 추가

* fix: layout 수정(헤더 하단 경계, 메인 최대폭)

* refactor: 필요없는 코드 제거

* fix: 불필요한 인자 제거

* fix: 스토리 이미지 기본값 설정

* fix: 인기 퍼즐 타이틀 중앙 정렬

* fix: 좋아요 기능 성공, 에러시 알림 수정

--- a/src/index.css
+++ b/src/index.css
@@ -76,4 +76,17 @@ a {
   .line-clamp-4 {
     -webkit-line-clamp: 4;
   }
+  .scrollbar::-webkit-scrollbar {
+    width: 9px;
+    height: 9px;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background-color: #c1c1c1;
+    border-radius: 9999px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
 }
