--- a/src/index.css
+++ b/src/index.css
@@ -89,4 +89,25 @@ a {
   .scrollbar::-webkit-scrollbar-track {
     background-color: #f1f1f1;
   }
+  .kakao-color {
+    background: #fee500;
+    color: #000;
+  }
+  .naver-color {
+    background: #03c75a;
+    color: #fff;
+  }
+  .login-btn {
+    padding: 0 10px;
+    width: 100%;
+    height: 56px;
+    min-width: 200px;
+    display: flex;
+    align-items: center;
+    border-radius: 6px;
+  }
+  .login-btn-text {
+    width: calc(100% - 56px);
+    text-align: center;
+  }
 }
