--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ a {
     color: #fff;
   }
   .login-btn {
-    padding: 0 10px;
+    padding: 0 8px;
     width: 100%;
     height: 56px;
     min-width: 200px;
@@ -107,6 +107,7 @@ a {
     border-radius: 6px;
   }
   .login-btn-text {
+    padding-right: 15px;
     width: calc(100% - 56px);
     text-align: center;
   }
