fix: 소셜로그인 디자인 추가 및 로그인 세부 기능, 스타일 수정 (#44)
* fix: 401에러시 logout

* feat: 카카오, 네이버 소셜로그인 버튼 추가

* fix: 로그인 버튼 글자 위치 변경

* fix: 소셜로그인 버튼 정렬 변경

* fix: 소셜로그인 구분자 추가

* fix: 로그인 form 간격 변경

* fix: 소셜로그인 임시 동작 추가(alert)

* fix: 로그인 페이지일 경우 헤더에서 로그인 제거

* feat: GuestGuard 추가 및 로그인, 회원가입 페이지 적용

--- a/src/index.css
+++ b/src/index.css
@@ -89,4 +89,55 @@ a {
   .scrollbar::-webkit-scrollbar-track {
     background-color: #f1f1f1;
   }
+  .kakao-color {
+    background: #fee500;
+    color: #000;
+  }
+  .naver-color {
+    background: #03c75a;
+    color: #fff;
+  }
+  .login-btn {
+    padding: 0 8px;
+    height: 56px;
+    flex: 1;
+    min-width: 200px;
+    display: flex;
+    align-items: center;
+    border-radius: 6px;
+  }
+  .login-btn-text {
+    padding-right: 15px;
+    width: calc(100% - 56px);
+    text-align: center;
+  }
+  .center-line {
+    position: relative;
+    height: 30px;
+    text-align: center;
+  }
+  .center-line:before,
+  .center-line:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    width: 50%;
+    height: 1px;
+    background-color: rgb(163 163 163);
+  }
+  .center-line:before {
+    left: 0;
+  }
+  .center-line:after {
+    right: 0;
+  }
+  .center-line-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 3px 10px 0;
+    transform: translate(-50%, -50%);
+    background: white;
+    z-index: 10;
+  }
 }
